# yomitan-api-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml
client/: Cargo.toml
installer/: Cargo.toml  build.rs
installer/src/: installer.rs  lib.rs
platform/macos/: README.txt  build-app
platform/macos/Yomitan API (rs) Installer.app/Contents/: Info.plist
platform/macos/Yomitan API (rs) Installer.app/Contents/MacOS/: terminal-hook
platform/macos/Yomitan API (rs) Installer.app/Contents/Resources/: icon.icns
